[package]
name = "lotto-processing"
version = "0.1.0"
edition = "2021"
default-run = "lotto-processing"

[[bin]]
name = "json_to_csv"
path = "src/bin/json_to_csv.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
supabase_rs = "0.4.0"

